fix: improved the client gen with service splitting output
